Fix social icon alignmnet issue

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ header .button {
 .section-one .social-icons {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 170.17px;
   height: 20px;
   margin-top: 12px;
